<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.aula7.quizgabrielmontezumai024114.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/backgroundindex">


            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"

                android:text="@string/financiar"
                android:textSize="20dp"
                android:textColor="@android:color/white"
                android:layout_marginTop="15dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7_963_420"
                android:layout_centerInParent="true"
                android:layout_below="@id/text1"
                android:textColor="@android:color/white"
                android:layout_marginTop="25dp"
                android:textSize="30dp"
                android:textStyle="bold"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mar_15_22_2018"
                android:layout_centerInParent="true"
                android:layout_below="@id/text2"
                android:textColor="@android:color/white"
                android:layout_marginTop="10dp"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingresos"
                    android:textColor="@color/colorPrimary"
                    android:layout_centerInParent="true"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$1.173.000"
                    android:layout_below="@id/text3"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"



                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+13%"
                    android:layout_toRightOf="@id/text3"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_centerInParent="true"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:background="@drawable/border"
                    android:textSize="15dp"


                    />
            </RelativeLayout>
            <view
                android:layout_width="1dp"
                android:layout_height="match_parent"
                ></view>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/text4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gastos"
                    android:textColor="@color/colorPrimary"
                    android:layout_centerInParent="true"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$3.747.000"
                    android:layout_below="@id/text4"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"



                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-37%"
                    android:layout_toRightOf="@id/text4"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/border_1"
                    android:textSize="15dp"
                    android:textColor="@android:color/white"


                    />
            </RelativeLayout>



        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorGray"


            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/historial_de_transacciones"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mas"
                android:layout_weight="1"
                android:layout_marginLeft="70dp"
                />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/arrow"

                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorGray"

            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">
            <TextView
                android:id="@+id/tit1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mercado Libre"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="15 - 03 - 2018"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:layout_below="@id/tit1"/>



                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-57.30"
                    android:textSize="20dp"
                android:layout_weight="1"
                    android:textColor="@color/colorAccent"

                    android:layout_alignParentRight="true"
                />



            </RelativeLayout>

        </LinearLayout>
        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"
            ></view>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorGray"

            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:id="@+id/tit2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mercado Libre"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="15 - 03 - 2018"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:layout_below="@id/tit2"/>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-57.30"
                    android:textSize="20dp"
                    android:layout_weight="1"
                    android:textColor="@color/colorAccent"

                    android:layout_alignParentRight="true"
                    />



            </RelativeLayout>

        </LinearLayout>
        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"
            ></view>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorGray"

            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:id="@+id/tit3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mercado Libre"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="15 - 03 - 2018"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:layout_below="@id/tit3"/>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-57.30"
                    android:textSize="20dp"
                    android:layout_weight="1"
                    android:textColor="@color/colorAccent"

                    android:layout_alignParentRight="true"
                    />



            </RelativeLayout>

        </LinearLayout>
        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"
            ></view>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorGray"

            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:id="@+id/tit4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mercado Libre"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="15 - 03 - 2018"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:layout_below="@id/tit4"/>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-57.30"
                    android:textSize="20dp"
                    android:layout_weight="1"
                    android:textColor="@color/colorAccent"

                    android:layout_alignParentRight="true"
                    />



            </RelativeLayout>

        </LinearLayout>
        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"
            ></view>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:src="@drawable/plus"
        android:layout_margin="16dp"/>

</android.support.design.widget.CoordinatorLayout>
